<resources>
    <string name="app_name">FKL</string>
    <string name="nama">Nama</string>
    <string name="jumlahuang">Nominal Rupiah</string>
    <string name="tanggal">Tanggal</string>
    <string name="tempattanggal">Tempat tanggal</string>
    <string name="status">Status</string>
    <string name="lunas">Sudah Dibayar</string>
    <string name="tidaklunas">Belum Dibayar</string>
    <string name="simpanbtn">Simpan</string>
    <string name="tampil">Tampilkan Data</string>
    <string name="tnama">tempat nama</string>
    <string name="tempatuang">tuang</string>
    <string name="kembali">kembali</string>
    <string name="update">Update</string>
    <string name="tid">tempatid</string>
    <string name="id">id</string>
    <string name="totaldata">Total Uang  :</string>
    <string name="totaluangL">Uang Lunas  :</string>
    <string name="totaluangTL">Uang Tidak Lunas  :</string>
    <string name="totallunas">Sudah Setor</string>
    <string name="totaltlunas">Data Tidak Lunas  :</string>
    <string name="tempatutlunas">Belum Setor</string>
    <string name="tempatulunas">tempatL</string>
    <string name="totalUlunas">Uang Lunas  :</string>
    <string name="totalUTlunas">Uang Tidak Lunas  :</string>
    <string name="datakegiatan">List Kegiatan Dakwah</string>
    <string name="namakegiatan">Nama Kegiatan</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="softwareby">Application by :</string>
    <string name="aladzivie">Aladziviesoft | SOFTWARE HOUSE LUMAJANG</string>
    <string name="cp">Contact Person</string>
    <string name="nohpcp">083114029547</string>
    <string name="nohpcp2">082232803556</string>
    <string name="city">City</string>
    <string name="lumajang">Lumajang, East Java</string>
    <string name="emailkantor">Info Email</string>
    <string name="emailat">infoaladzivie@gmail.com</string>
    <string name="cptitle">Contact Us :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isiapp">Aplikasi ini adalah aplikasi yang ditujukan untuk sistem keuangan untuk taawun kegiatan kajian, pada awalnya para ikhwan menggunakan catatan manual untuk mencatat donasi dari ummat, maka dengan permasalahan tersebut developer ingin menyalurkan keahliannya untuk membantu agar pencatatan donasi lebih praktis, efisien waktu dan ke akuratan dalam menghitung hasil donasi. Maka dengan terbuatnya aplikasi ini semoga bisa membantu dakwah agar lebih mudah. InsyaAllah</string>
    <string name="inven">Inventory</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="banyak_barang">Banyak Barang</string>
    <string name="nav_header_desc">navigation header</string>
    <string name="nav_header_title">Nama User</string>
    <string name="nav_header_subtitle">Tempat Saldo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nama_aplikasi">Nama Aplikasi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pengaturan">Setting</string>
    <string name="pengaturanprofil">Pengaturan Profil</string>
    <string name="take">Ambil Foto</string>
    <string name="explore">Browse</string>
    <string name="create">Create Account</string>
    <string name="logout">Keluar Akun</string>
    <string name="edituser">Edit User</string>
    <string name="saldo">Saldo Awal</string>
    <string name="tambah">Tambah Kegiatan</string>
    <string name="detail">Detail</string>
    <string name="uang">Rp. 13,000,000</string>
    <string name="targetdata">Target Dana</string>
    <string name="detailkeuangan">Detail Keuangan</string>
    <string name="danaterkumpul">Dana Terkumpul</string>
    <string name="sisa">Sisa Kekuarangan</string>
    <string name="nol">Rp. 0</string>
    <string name="iqbal">Muhammad Iqbal Maulana</string>
    <string name="via">Via : Abu Muhammad</string>
    <string name="namapenyetor">Nama Penyetor</string>
    <string name="kelebihan">Kelebihan Dana</string>
    <string name="editsaldo">Edit Saldo</string>
    <string name="tambahsaldo">Tambah Saldo</string>
    <string name="refresh">Refresh</string>
    <string name="rencanaanggaran">Rencana Anggaran Kegiatan</string>
    <string name="rencanaanggarans">Rencana Anggaran Kegiatan Sosial</string>
    <string name="namarab">Rencana Anggaran Untuk</string>
    <string name="ketikkandisini">Ketikkan disini</string>
    <string name="penerimadana">Penerima Dana</string>
    <string name="jenispengeluaran">Jenis Pengeluaran</string>
    <string name="listpengeluaran">List Pengeluaran</string>
    <string name="sisadana">Sisa Dana</string>
    <string name="jumlahpengeluaran">Jumlah Pengeluaran</string>
    <string name="saldoakhir">Saldo Akhir</string>
    <string name="add">Add</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="anggarkandana">Anggarkan Dana</string>
    <string name="kasbendahara">Kas Bendahara</string>
    <string name="formpengeluaran">Masukkan Pengeluaran</string>
    <string name="keperluan">Keperluan</string>
    <string name="date">2019-01-09 14:55:52</string>
    <string name="tambahinven">Tambah Inventory</string>
    <string name="updateinven">Update Inventory</string>
    <string name="tambahtaawun">Tambah Taawun</string>
    <string name="tambahpengeluaran">Tambah Pengeluaran</string>
    <string name="export">Export Data Ta\'awun</string>
    <string name="pilihkegiatan">Pilih Kegiatan</string>
    <string name="teks">Teks....</string>
    <string name="no">No</string>
    <string name="preview">Preview</string>
    <string name="idsiap">ID Sudah Siap</string>
    <string name="copytext">Copy Text</string>
    <string name="carnamakegiatan">cari nama kegiatan...</string>
    <string name="cari">Cari</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="whatsapp">Chat Pembuat Aplikasi</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="level">Hak Akses</string>
    <string name="warning">* Password harus di isi untuk verifikasi bahwa ini adalah akun milik anda.</string>
    <string name="warning2">* Harap tidak menggunakan foto profile makhluk bernyawa.</string>
    <string name="share">Copy Data Taawun</string>
    <string name="whatsappshare">Share Ke Whatsapp Admin</string>
    <string name="saldohanya">*Saldo hanya diinputkan 1x, yaitu saat pembukaan awal aplikasi</string>
    <string name="copy">*Klik text untuk meng-copy isi nya</string>
    <string name="formtaawun">Form Ta awun</string>
    <string name="carinamauser">Cari Nama User...</string>
    <string name="listuser">List User</string>
    <string name="formpeminjam">Masukkan Nama Pemberi Pinjaman</string>
    <string name="tempo_bayar">Tempo Bayar</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="pemberi_pinjaman">Pemberi Pinjaman</string>
    <string name="ktp">9877366763663666</string>
    <string name="hp">082232803556</string>
    <string name="nominal">8000000</string>
    <string name="tanggal2">12/02/2019</string>
    <string name="noktp">No. KTP</string>
    <string name="formktp">Masukkan Nomor KTP</string>
    <string name="formnohp">Masukkan No. HP</string>
    <string name="nohp">0822-32xx-xxxx</string>
    <string name="sumberdana">Sumber Dana</string>
    <string name="namamasjid">Nama Masjid</string>
    <string name="tambahmenabung">Tambah Menabung</string>
    <string name="rencana">Rencana</string>
    <string name="sukses">Sukses</string>
</resources>