<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PemberiPinjaman.GPemberiPinjamanBaru">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.1"
                android:background="@drawable/ripple_effect_back"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/pemberi_pinjaman"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formpeminjam" />

            <EditText
                android:id="@+id/etNamaPemberiPinjaman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:inputType="textCapWords"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formktp" />

            <EditText
                android:id="@+id/etNoKtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noktp"
                android:inputType="textCapWords"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formnohp" />

            <EditText
                android:id="@+id/etNoHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nohp"
                android:inputType="textCapWords"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jumlahuang" />

            <EditText
                android:id="@+id/etNominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/nol"
                android:inputType="numberDecimal"
                android:padding="5dp" />

            <TextView
                android:id="@+id/txDesimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/calibri"
                android:gravity="end"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempo_bayar" />

            <Button
                android:id="@+id/pilihtanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_tanggal" />

            <TextView
                android:id="@+id/txTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:id="@+id/status"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ceksts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunas" />

                <TextView
                    android:layout_marginStart="20dp"
                    android:id="@+id/txStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btSimpan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button_hijau_save"
            android:text="@string/simpanbtn"
            android:textColor="@color/bgcolor" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button_hijau_save"
            android:text="@string/update"
            android:textColor="@color/bgcolor" />

    </LinearLayout>
</LinearLayout>