<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardv"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center|top"
            android:padding="5dp"
            android:text="@string/nol"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:id="@+id/txNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iqbal" />

            <TextView
                android:id="@+id/txJumlahUang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:text="@string/uang"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/txTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal" />


        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
