<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linearlayout"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Menabung.TambahMenabung">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.1"
                android:background="@drawable/ripple_effect_back"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/tambahmenabung"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namamasjid" />

            <EditText
                android:id="@+id/etnamasjid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:id="@+id/txTgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal" />

            <Button
                android:id="@+id/pilihtanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_tanggal" />

            <TextView
                android:id="@+id/txTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status" />


                <RadioGroup
                    android:id="@+id/rgrub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbRencana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rencana"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rbSukses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sukses" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_corner_button_hijau_save"
            android:text="@string/simpanbtn"
            android:textColor="@color/bgcolor" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_corner_button_hijau_save"
            android:text="@string/update"
            android:textColor="@color/bgcolor" />

    </LinearLayout>

</LinearLayout>