<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Namabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/nama_barang" />

        <TextView
            android:id="@+id/Hargabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri"
            android:padding="5dp"
            android:text="@string/uang"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Banyakbarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/banyak_barang" />
    </LinearLayout>

</android.support.v7.widget.CardView>